--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,10 @@
 [versions]
 agp = "8.6.1"
+cameraCore = "1.4.0"
+cameraCamera2 = "1.4.0"
+cameraLifecycle = "1.4.0"
+cameraView = "1.4.0"
+cameraExtensions = "1.4.0"
 glide = "4.15.1"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
@@ -20,6 +25,11 @@ roomKtx = "2.5.0"
 datastoreCoreAndroid = "1.1.1"
 
 [libraries]
+androidx-camera-extensions = { module = "androidx.camera:camera-extensions", version.ref = "cameraExtensions" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "cameraView" }
+androidx-camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "cameraLifecycle" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraCamera2" }
+androidx-camera-core = { module = "androidx.camera:camera-core", version.ref = "cameraCore" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomKtx" }
