--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:theme="@style/Theme.P3tsKit"
         tools:targetApi="31">
         <activity
-            android:name=".ui.newsletter.NewsActivity"
+            android:name=".ui.NewsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
