--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,17 +26,25 @@
         android:theme="@style/Theme.P3tsKit"
         tools:targetApi="31">
         <activity
-            android:name=".ui.NewsActivity"
-            android:exported="false" />
+            android:name=".ui.splash.SplashActivity"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.welcome.WelcomeActivity"
+            android:exported="true" />
+
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
+        <activity
+            android:name=".ui.NewsActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false" />
