--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,22 +26,23 @@
         android:theme="@style/Theme.P3tsKit"
         tools:targetApi="31">
         <activity
+            android:name=".ui.about.AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.splash.SplashActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.welcome.WelcomeActivity"
             android:exported="true" />
-
         <activity
             android:name=".ui.register.RegisterActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ui.NewsActivity"
             android:exported="false" />
