--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         android:theme="@style/Theme.P3tsKit"
         tools:targetApi="31">
         <activity
+            android:name=".ui.QA.ChatActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.about.AboutActivity"
             android:exported="false" />
         <activity
